--- a/index.html
+++ b/index.html
@@ -1,29 +1,74 @@
 <html>
+
   <head>
     <link rel="stylesheet" href="./src/styles.css">
   </head>
+
   <body>
-    <h1></h1>
-    <div>
-      <div>
-        <h2>Click start to play!</h2>
-      </div>
-      <div>
+
+    <div class="header">
+      <h1 id="title"> Strike-a-Star </h1>
+    </div>    
+
+    <div id="starterBox">      
+     <h2>Click <span> <button id="start"> START </button> <span> to play! Choose a difficulty:</h2> 
+      <div id="selectedDifficulty"> 
+        <h2> <span> <button id="easySelector"> EASY </button> </span> </h2> 
+        <h2> <span> </span><button id="normalSelector"> NORMAL </button> </span> </h2>
+        <h2> <span> <button id="hardSelector"> HARD </button> </span> </h2> 
+      </div>    
         <h2>score: <span id="score">0</span></h2>
+        <h2><span id="timer">0</span> seconds left.</h2>
       </div>
-      <div>
-          <h2><span id="timer">0</span> seconds left.</h2>
-      </div>
-    </div>
+
     <div class="grid">
       <div id="hole0" class="hole">
-        <div id="mole0" class="mole"></div>
+        <div id="star0" class="star"></div>
+        <div id="sprite0" class="sprite"></div>
       </div>
+
       <div id="hole1" class="hole">
-        <div id="mole1" class="mole"></div>
+        <div id="star1" class="star"></div>
+        <div id="sprite1" class="sprite"></div>
       </div>
+
+      <div id="hole2" class="hole">
+        <div id="star2" class="star"></div>
+        <div id="sprite2" class="sprite"></div>
+      </div>
+
+      <div id="hole3" class="hole">
+          <div id="star3" class="star"></div>
+          <div id="sprite3" class="sprite"></div>
+      </div>
+
+      <div id="hole4" class="hole">
+        <div id="star4" class="star"></div>
+        <div id="sprite4" class="sprite"></div>
+      </div>
+
+      <div id="hole5" class="hole">
+        <div id="star5" class="star"></div>
+        <div id="sprite5" class="sprite"></div>
+      </div>
+
+      <div id="hole6" class="hole">
+        <div id="star6" class="star"></div>
+        <div id="sprite6" class="sprite"></div>
+      </div>
+
+      <div id="hole7" class="hole">
+        <div id="star7" class="star"></div> 
+        <div id="sprite7" class="sprite"></div>
+      </div> 
+      
+      <div id="hole8" class="hole">
+        <div id="star8" class="star"></div>
+        <div id="sprite8" class="sprite"></div>
+       </div>
       <!--TODO: Add the missing holes and moles. -->
     </div>
     <script src="./src/index.js"></script>
   </body>
+
 </html>
