Complete qualified assignment, js-dev-final-capstone-starter-whack-a-mole.

--- a/index.html
+++ b/index.html
@@ -10,15 +10,20 @@
       <h1 id="title"> Strike-a-Star </h1>
     </div>    
 
-    <div id="starterBox">      
-     <h2>Click <span> <button id="start"> START </button> <span> to play! Choose a difficulty:</h2> 
+    <div id="starterBox">
+      
+      <div>      
+     <h2> Choose a difficulty:</h2>  
+      </div>
+
       <div id="selectedDifficulty"> 
         <h2> <span> <button id="easySelector"> EASY </button> </span> </h2> 
         <h2> <span> </span><button id="normalSelector"> NORMAL </button> </span> </h2>
         <h2> <span> <button id="hardSelector"> HARD </button> </span> </h2> 
       </div>    
-        <h2>score: <span id="score">0</span></h2>
-        <h2><span id="timer">0</span> seconds left.</h2>
+      <h2>Click <span> <button id="start"> START </button> <span> to play!</h2>
+        <h2>Score: <span id="score">0</span></h2>
+        <h2>Seconds Left: <span id="timer">0</span></h2>
       </div>
 
     <div class="grid">
